# pd_shmem

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  README.md  shmem-meta.pd  shmem.c  shmem_table_receive-help.pd  shmem_table_receive.pd  shmem_table_send-help.pd  shmem_table_send.pd  shmem_version.c.in  shmem_version.h
.github/workflows/: build-pd-externals.yml
